# kauto

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
competitions/: .gitignore
competitions/configs/: config.yaml
competitions/docs/: AGENTS.md  DATA.md  EXPERIMENTS.md  LESSONS_LEARNED.md  OVERVIEW.md  README.md  VERIFICATION_PLAN.md
competitions/experiments/: exp001_baseline.py  exp002_image_baseline.py  exp003_image_gpu.ipynb  exp003_image_gpu.py  exp004_stratified_validation.py  exp005_background_aug.ipynb  exp005_background_aug.py  exp006_improvements.py  exp006_phase2_arcface.ipynb  exp006_phase2_arcface.py  exp006_phase2_arcface_embedding.ipynb  exp006_phase2_arcface_embedding.py  exp006_phase2_ema.py  exp006_phase2_embedding.ipynb  exp006_phase2_embedding.py  exp006_phase2_structural.ipynb  exp006_phase2_structural.py
competitions/src/: __init__.py  cnn_model.py  dataset.py  experiment_logger.py  generate_background.py  image_dataset.py  metric_learning.py  metrics.py  model.py  models.py  utils.py  utils_ema.py  validation.py
core/agent/: base.py  mcp_server.py  orchestrator.py  tools.py
core/experiment/: runner.py  tracker.py
core/utils/: competition_manager.py  submitter.py  (+1 more)
docs/: README.md  agent_architecture.md  agent_usage.md  antigravity_agent_guide.md  orchestrator_usage.md  project_charter.md
prompts/: agent_system.md  hypothesis_generation.md  result_analysis.md
scripts/: check_api_details.py  check_api_details_v2.py  check_kaggle.py  debug_scrape_v2.py  inspect_api.py  test_playwright.py
tests/: test_e2e.py
(+15 files in other folders)
